--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -340,7 +340,7 @@ vertical-align: middle;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -352,11 +352,11 @@ a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[hre
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150b 'motes. */
-a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"]
+a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"]
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
-a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/hnng"]
+a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/hnng"], a[href|="/woonabounce"]
 {background-image:url(%%200x200a%%);width:200px;height:200px;display:block;float:left;}
 
 /* 250x250a 'motes. */
@@ -377,8 +377,12 @@ a[href|="/braecozy"], a[href|="/caramelsad"], a[href|="/twilicry"], a[href|="/sf
 {background-image:url(%%misfitsb%%);display:block;float:left;}
 
 /* Misfits c */
-a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacelehug"], a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"], a[href|="/trixiedisappointed"], a[href|="/trixiedoublefacehoof"], a[href|="/raribat"], a[href|="/ppblushing"], a[href|="/raritymusicalface"], a[href|="/fireflypounce"], a[href|="/secretponythread"], a[href|="/surprisebitch"]
+a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacelehug"], a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"], a[href|="/trixiedisappointed"], a[href|="/trixiedoublefacehoof"], a[href|="/raribat"], a[href|="/ppblushing"], a[href|="/raritymusicalface"], a[href|="/fireflypounce"], a[href|="/secretponythread"], a[href|="/surprisebitch"], a[href|="/pinkiepoint"]
 {background-image:url(%%misfitsc%%);display:block;float:left;}
+
+/* Misfits d */
+a[href|="/sonavinyl"]
+{background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
 a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"]
@@ -393,7 +397,7 @@ a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebein
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
-a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"]
+a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"]
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
@@ -413,7 +417,7 @@ a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutral
 {background-position: -100% -200%;}
 
 /* Grid pos 2,2 'motes */
-a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"]
+a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"]
 {background-position: -200% -200%;}
 
 
@@ -431,7 +435,7 @@ a[href|="/rdsmirk"], a[href|="/cheekydash"], a[href|="/ajdur"], a[href|="/cocoha
 {background-position: -200% -300%;}
 
 /* Grid pos 0,4 'motes */
-a[href|="/sombrarage"], a[href|="/sadshy"]
+a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"]
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
@@ -469,6 +473,7 @@ a[href|="/manspikebrows"], a[href|="/sexualharrassment"] {background-image: url(
 a[href|="/manspikeheythere"], a[href|="/msheythere"], a[href|="/spikeheythere"] {background-image: url(%%heythere%%);width:150px;height:150px;display:block;float:left;}
 a[href|="/lyrapimpstrings"] {background-image: url(%%lyrapimpstrings%%);width:159px;height:170px;display:block;float:left;}
 a[href|="/woonatype"] {background-image: url(%%woonatype%%);width:200px;height:187px;display:block;float:left;}
+a[href|="/octabelleintensifies"], a[href|="/octybelleintensifies"] {background-image: url(%%octabelleintensifies%%);width:113px;height:150px;display:block;float:left;}
 
 /* Misfit Emotes */
 a[href|="/fillycadance"] {width:100px;height:126px;}
@@ -510,4 +515,6 @@ a[href|="/ppblushing"] {width:158px;height:200px;background-position: -300px -14
 a[href|="/raritymusicalface"] {width:95px;height:200px;background-position: -343px -341px;}
 a[href|="/fireflypounce"] {width:150px;height:102px;background-position: 0 -566px;}
 a[href|="/secretponythread"] {width:300px;height:188px;background-position: -150px -566px;}
+a[href|="/pinkiepoint"] {width:178px;height:188px;background-position: -150px -566px;}
 a[href|="/surprisebitch"] {width:250px;height:193px;background-position: -250px -754px;}
+a[href|="/sonavinyl"] {width:300px;height:235px;}
