--- a/source-css/spitquisition.css
+++ b/source-css/spitquisition.css
@@ -441,6 +441,16 @@ width: 200px;
 height: 235px;
 background-image: url(%%sovietdash%%);
 }
+a[href|="/rainbowdashlovesmlpwilliammorethanshelovesyou"] {
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 225px;
+background-image: url(%%rainbowdashlovesmlpwilliammorethanshelovesyou%%);
+}
+
+
 /*Dashfire emotes*/
 
 a[href|="/dashfiretail"] {
