--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,7 +1,7 @@
 /* CSS last generated on Sat, 16 Feb 2013 02:06:21 -0600 by UNKNOWN on derpy */div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Fillies"}
+div.titlebox .subscribers span.number:after {content:" Fillies and Gentlecolts"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " being adorable" }
+div.titlebox p.users-online span.number:after { content: " Plounging about" }
 div.titlebox p.users-online span.word { display: none }
 
 .sidecontentbox .flair {display:none}
