--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -1053,6 +1053,7 @@ a.author[href$="Toklankitsune"],
 a.author[href$="bryvood"],
 a.author[href$="otwem"],
 a.author[href$="Kireas"],
+a.author[href$="Nephrited"],
 a.author[href$="AlisterDX"],
 a.author[href$="upvote_machine_1"],
 a.author[href$="Harakou"],
@@ -1085,6 +1086,7 @@ a.author[href$="Toklankitsune"]:before ,
 a.author[href$="bryvood"]:before ,
 a.author[href$="otwem"]:before ,
 a.author[href$="Kireas"]:before, 
+a.author[href$="Nephrited"]:before, 
 a.author[href$="AlisterDX"]:before, 
 a.author[href$="upvote_machine_1"]:before, 
 a.author[href$="Harakou"]:before,
@@ -1115,6 +1117,7 @@ a.author[href$="Toklankitsune"]:before {content:"DJ T0ki"}
 a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
 a.author[href$="otwem"]:before {content:"Otwem Scratch"}
 a.author[href$="Kireas"]:before {content:"Octavia"}
+a.author[href$="Nephrited"]:before {content:"Octavia"}
 a.author[href$="AlisterDX"]:before {content:"Homage"}
 a.author[href$="upvote_machine_1"]:before {content:"BANNED"}
 a.author[href$="Harakou"]:before {content:"Taco OIA"}
@@ -1127,6 +1130,7 @@ a.author[href$="JadeMeteor"]:before {content:"Octavia"}
 
 .author[href$="Ninja8259"] { color:aqua !important }
 .author[href$="Kireas"] { color:purple !important }
+.author[href$="Nephrited"] { color:purple !important }
 .author[href$="AlisterDX"] { color:aqua !important }
 .author[href$="Harakou"] { color:brown !important }
 .author[href$="nightpony"] { color:#a100a1 !important }
