Stylesheet/emote/tag updates 2014-02-02

--- a/source-css/bigmacintosh.css
+++ b/source-css/bigmacintosh.css
@@ -18,6 +18,14 @@ a[href|="/maccheer"] {
     height: 80px;
     background-image: url(%%bigyay%%)
     }
+a[href|="/macsalute"] {     
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 106px;
+    background-image: url(%%macsalute%%)
+    }
 a[href|="/machappy"] { 
     display: block;
     clear: none;
