--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -140,20 +140,20 @@ body.res-nightmode:first-of-type {
 /* Make changes next to the 6 # in subreddit settings */
 /* NOT HERE. */
 
-body > .content { padding-top: 24px }
+body > .content { padding-top: 0px }
 
 .side .md h6 {
     position: absolute;
-    top: 120px;
-    left: 20px;
+    top: 30px;
+    left: 100px;
     z-index: 100;
-    font-size: 16px;
+    font-size: 24px;
     height: 20px;
     line-height: 20px;
     text-indent: 5px;
-    background: #E0E3E9;
+/*    background: #E0E3E9;*/
     color: #000000;
-    border: 1px solid;
+    border: 0px solid;
     border-radius: 2px;
     padding-right: 5px;
     }
@@ -900,6 +900,7 @@ a[href|="/offend"] {
     background-image: url(%%emotesquare%%) !important;
     background-position: 0px -350px;
     }
+
 
 /* ------MACROS------- */
 a[href="/scumbagrando"] {
