--- a/source-css/mylittlecirclejerk.css
+++ b/source-css/mylittlecirclejerk.css
@@ -54,7 +54,7 @@ FYI MAKING ALL COMMENTS SAY THE SAME FUCKING THING IS A SUBREDDIT BANNABLE OFFEN
 *******************************/
 
 
-
+.sidecontentbox .content{visibility: hidden !important;}
 
 /* Esplin nearly saved Equestria. <3 */
 .author[href$="/PrincessCelestia"] { color: #336699 !important; }
