--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1379,6 +1379,7 @@ div.content{margin-top:15px}
 }
 
 /*Sidebar image*/
+/*
 .side .usertext a[href="http://goo.gl/UQQ9I5"] {
     background-image: url(%%join-the-cccc%%);
     background-position: 0 0;
@@ -1392,6 +1393,8 @@ div.content{margin-top:15px}
     z-index: 900;
 }
 
+
 .side{
     padding-top: 416px;
 }
+*/
