--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -499,6 +499,17 @@ a[href|="/daleksmile"] {
      width: 230px;
      height: 168px;
      }
+a[href|="/minus20"] {
+     display: block;
+     clear: none;
+     float: left;
+     background-image: url(%%MLPemotesheet-XLrg2%%) !important
+     }
+a[href|="/minus20"] {
+     background-position: -0px -0px;
+     width: 279px;
+     height: 350px;
+     }
 
 /***********Huge Emotes***********/
 a[href|="/udntsrslydntnomedood"] {
