--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -595,6 +595,30 @@ a[href|="/pinkiepan"] {
     height: 150px;
     background-image: url(%%pinkiepan%%) 
     }
+a[href|="/pinkieooo"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 125px;
+    background-image: url(%%pinkieooo%%) 
+    }
+a[href|="/skatiepie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 127px;
+    height: 150px;
+    background-image: url(%%skatiepie%%) 
+    }
+a[href|="/salutalo"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 80px;
+    background-image: url(%%salutalo%%) 
+    }
 
 /*Side Bar*/
 
