--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -2,10 +2,10 @@ div.titlebox span.word {
     display: none;
     }
 div.titlebox .subscribers span.number:after {
-    content: " Griffons"
+    content: " Ponies"
     }
 div.titlebox .users-online span.number:after {
-    content: " Preening"
+    content: " Prancing"
     }
 
 a.author[href$="PinkiePieladin"]:after{content:" - User of the Month Sept. 2013"}
@@ -73,7 +73,7 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%gildafooter%%);
+ background-image:url(%%flutterfooter%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
@@ -90,12 +90,12 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  .sidebox.create .morelink {display: none;}
 
 body {
-    background: url('%%gildabg2%%') no-repeat fixed right bottom !important;
+    background: url('%%flutterbg2%%') no-repeat fixed right bottom !important;
     background-color:#ffffff !important;
 } 
 
 #header #header-bottom-left {
-   background: url(%%gildaheader3%%) !important;
+   background: url(%%flutterheader3%%) !important;
    background-repeat: no-repeat !important;
    background-position: 50% 100% !important;
    height: 205px; 
