--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -619,35 +619,35 @@ a.author[href$="DiscordDraconequus"] {
     }
 
 a.author[href$="DiscordDraconequus"]:after {
-    content: "DiscordDraquneqqussamithson ";
+    content: "Butt ";
     font-size: 10px !important;
     visibility: visible !important;
     display: block;
     letter-spacing: normal
     }
-a.author[href$="Juz11"] {
+a.author[href$="ErisDraconequus"] {
     font-size: 0px !important;
     display: inline-block;
     vertical-align: bottom;
     overflow: hidden;
     letter-spacing: -20px
     }
-a.author[href$="Juz11"]:after {
-    content: "Juz16";
+a.author[href$="ErisDraconequus"]:after {
+    content: "AlsoButt ";
     font-size: 10px !important;
     visibility: visible !important;
     display: block;
     letter-spacing: normal
     }
-a.author[href$="Juz19"] {
+a.author[href$="tortillatime"] {
     font-size: 0px !important;
     display: inline-block;
     vertical-align: bottom;
     overflow: hidden;
     letter-spacing: -20px
     }
-a.author[href$="Juz19"]:after {
-    content: "Juz16";
+a.author[href$="tortillatime"]:after {
+    content: "taco";
     font-size: 10px !important;
     visibility: visible !important;
     display: block;
@@ -659,28 +659,6 @@ body.res a.author[href$="CupcakeDraconequus"], body.res a.author[href$="PretzelD
 body.res a.author[href$="______Draconequus"] {color: white; background-color: #0055DF }
 body.res a.author[href$="PretzelDraconequus"] {color: white; background-color: #0055DF }
 body.res a.author[href$="CupcakeDraconequus"] {color: white; background-color: #0055DF }
-
-
-
-/* Removed cause taco's a butt. */
-
-a.author[href$="Phei"] {
-   font-size:0!important; 
-   overflow:hidden; 
-   display:inline-block; 
-   content: "";
-   }
-
-a.author[href$="Phei"]:after {
-    content: "Pheilight";
-    font-size: 10px !important;
-    visibility: visible !important;
-    letter-spacing: normal;
-    display: inline-block;
-/*  color: #FFFF33 */
-    }
-
-/* I CAN ADD SPECIAL NAMES FOR WHOEVER I WANT */
 
 
 /* Juz (PSST I DEFINITELY DIDN'T STEAL THIS FROM THE PLOUNGE ARE YOU CRAZY PFFFFT) */
@@ -827,3 +805,18 @@ background-position: -200px -600px;
 .res-nightmode .linkflair-announcement { background-image: linear-gradient(90deg, #0E0E0E, transparent, transparent, transparent, transparent, transparent, transparent) !important; }
 .res-nightmode .linkflair-day { background-image: linear-gradient(90deg, #30300E, transparent, transparent, transparent, transparent, transparent, transparent) !important; }
 .res-nightmode .linkflair-night { background-image: linear-gradient(90deg, #000000, transparent, transparent, transparent, transparent, transparent, transparent) !important; }
+
+.content h3 {
+    font-size: 30pt;
+    font-weight: bolder;
+    color: red;
+}
+ 
+h3.imgTitle{
+    font-size: 13px;
+    padding: 2px;
+    color: #000;
+}
+
+.RESDialogSmall.livePreview > h3 {color: black;font-size: 14px;margin-top: 6px;margin-bottom: 10px;font-weight: normal;}
+.res-nightmode .RESDialogSmall h3 {color: #ccc}
