--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -340,11 +340,11 @@ vertical-align: middle;
  */
 
 /* 70x70a 'motes. */
-a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"]
+a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[href|="/lemonglee"], a[href|="/grannyglad"], a[href|="/aloe"], a[href|="/ohyeah"], a[href|="/neutraljack"], a[href|="/fillyfirefly"], a[href|="/rdwat"], a[href|="/cocosmile"], a[href|="/cocohappy"], a[href|="/cocosad"], a[href|="/grimfluff"]
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
-a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"]
+a[href|="/cadface"], a[href|="/apathiablankstare"], a[href|="/twicider"], a[href|="/nomakeup"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/winona"], a[href|="/lunahmm"], a[href|="/scootexcited"], a[href|="/fluttereyebrow"], a[href|="/smugcolgate"], a[href|="/trixielecture"], a[href|="/ajdur"], a[href|="/sadshy"], a[href|="/ajdoubt"], a[href|="/discoin"], a[href|="/twidoubt"], a[href|="/ppdoubt"], a[href|="/raridoubt"], a[href|="/flutterdoubt"], a[href|="/dashdoubt"]
 {background-image:url(%%100x100a%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -352,7 +352,7 @@ a[href|="/tuxpony"], a[href|="/chibiluna"], a[href|="/shiningcadancehug"], a[hre
 {background-image:url(%%150x150a%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150b 'motes. */
-a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"]
+a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/derpyshrug"], a[href|="/gravestone"], a[href|="/theydied"]
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -377,11 +377,11 @@ a[href|="/braecozy"], a[href|="/caramelsad"], a[href|="/twilicry"], a[href|="/sf
 {background-image:url(%%misfitsb%%);display:block;float:left;}
 
 /* Misfits c */
-a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacelehug"], a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"], a[href|="/trixiedisappointed"], a[href|="/trixiedoublefacehoof"], a[href|="/raribat"], a[href|="/ppblushing"], a[href|="/raritymusicalface"], a[href|="/fireflypounce"], a[href|="/secretponythread"], a[href|="/surprisebitch"], a[href|="/pinkiepoint"]
+a[href|="/twitiger"], a[href|="/twiger"], a[href|="/tanktwi"], a[href|="/lunacelehug"], a[href|="/magicmissile"], a[href|="/icastmagicmissile"], a[href|="/pinkmage"], a[href|="/trixiedisappointed"], a[href|="/trixiedoublefacehoof"], a[href|="/raribat"], a[href|="/ppblushing"], a[href|="/raritymusicalface"], a[href|="/fireflypounce"], a[href|="/secretponythread"], a[href|="/surprisebitch"], a[href|="/pinkiepoint"], a[href|="/twiyugi"], a[href|="/lunadash"], a[href|="/dabkilmandmeerkat"]
 {background-image:url(%%misfitsc%%);display:block;float:left;}
 
 /* Misfits d */
-a[href|="/sonavinyl"]
+a[href|="/sonavinyl"], a[href|="/pinkierage"], a[href|="/pinkrage"], a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"], a[href|="/readingrainbow"]
 {background-image:url(%%misfitsd%%);display:block;float:left;}
 
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
@@ -401,7 +401,7 @@ a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[h
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"]
+a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"]
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
@@ -439,20 +439,51 @@ a[href|="/sombrarage"], a[href|="/sadshy"], a[href|="/cocosad"]
 {background-position: 0 -400%;}
 
 /* Grid pos 1,4 'motes */
-a[href|="/gildaconfused"]
+a[href|="/gildaconfused"], a[href|="/ajdoubt"], a[href|="/grimfluff"]
 {background-position: -100% -400%;}
 
 /* Grid pos 2,4 'motes */
-a[href|="/rarityspy"]
+a[href|="/rarityspy"], a[href|="/discoin"]
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
-a[href|="/twilightyay"]
+a[href|="/twilightyay"], a[href|="/twidoubt"]
 {background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
-a[href|="/tiadisapproval"]
-{background-position: -100% -500%}
+a[href|="/tiadisapproval"], a[href|="/ppdoubt"]
+{background-position: -100% -500%;}
+
+/* Grid pos 2,5 'motes */
+a[href|="/raridoubt"]
+{background-position: -200% -500%;}
+
+/* Grid pos 0,6 'motes */
+a[href|="/flutterdoubt"]
+{background-position: 0 -600%;}
+
+/* Grid pos 1,6 'motes */
+a[href|="/dashdoubt"]
+{background-position: -100% -600%;}
+
+/* Text Emotes */
+a[href|="/gravestone"] em, a[href|="/theydied"] em
+{
+font-family: "Celestia Redux Alternate", "Celestia Redux", serif;
+color: #666 !important;
+text-align: center !important;
+font-size: 15px;
+font-style: normal !important;
+position: relative;
+top: 63px;
+left: 40px;
+width: 91px !important;
+height: 42px !important;
+display: block;
+overflow: hidden;
+}
+a[href|="/gravestone"]:hover, a[href|="/theydied"]:hover
+{text-decoration: none !important;}
 
 /* Animated Emotes */
 a[href|="/moofintezzter"], a[href|="/muffintester"] {background: url(%%muffintester%%) no-repeat;width:200px;height:177px;display:block;float:left;}
@@ -518,3 +549,8 @@ a[href|="/secretponythread"] {width:300px;height:188px;background-position: -150
 a[href|="/pinkiepoint"] {width:178px;height:188px;background-position: -150px -566px;}
 a[href|="/surprisebitch"] {width:250px;height:193px;background-position: -250px -754px;}
 a[href|="/sonavinyl"] {width:300px;height:235px;}
+a[href|="/twiyugi"] {width:120px;height:116px;background-position: 0 -668px;}
+a[href|="/lunadash"], a[href|="/dabkilmandmeerkat"] {width:200px;height:137px;background-position: 0 -784px;}
+a[href|="/pinkierage"], a[href|="/pinkrage"] {width:200px;height:167px;background-position: -300px 0;}
+a[href|="/lunadashkiss"], a[href|="/deathdudeandmeerkat"] {width:300px;height:152px;background-position: -500px 0;}
+a[href|="/readingrainbow"] {width:177px;height:250px;background-position: -823px 0;}
