--- a/source-css/thecane.css
+++ b/source-css/thecane.css
@@ -314,6 +314,10 @@ color:#6c5701;
 background-color:#f7e869;
 }
 
+.info-notice {
+background-color:#f7e869!important;
+border:none!important;
+}
 .submit_text h1 {
 color:#6c5701;
 }
